@@ -15,7 +15,7 @@
     <maven.compiler.release>25</maven.compiler.release>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.37.0.CR1</quarkus.platform.version>
+    <quarkus.platform.version>3.39.2</quarkus.platform.version>
     <surefire-plugin.version>3.6.0</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -66,11 +66,6 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit-mockito</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus.junit</groupId>
-      <artifactId>junit-virtual-threads</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -144,7 +139,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
-          <argLine>-Djdk.tracePinnedThreads --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
@@ -161,7 +155,6 @@
               <goal>verify</goal>
             </goals>
             <configuration>
-              <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
               <systemPropertyVariables>
                 <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
